--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,7 @@ input {
 }
 
 .photo-card {
+  background-color: rgb(189, 179, 179);
   margin-right: 15px;
   margin-bottom: 15px;
   padding: 15px;
