--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 body {
   padding: 20px;
   background-image: url('./images/search.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-repeat: no-repeat; */
+  background-size: contain;
 }
 
 img {
